--- a/rf_ransansomware/rf_rans_train.ipynb
+++ b/rf_ransansomware/rf_rans_train.ipynb
@@ -63,7 +63,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import pickle\n",
@@ -85,25 +85,37 @@
     "# Splitting the data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train the Random Forest classifier\n",
-    "clf = RandomForestClassifier()\n",
-    "clf.fit(X_train, y_train)\n",
+    "# Hyperparameter tuning using GridSearchCV\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200],\n",
+    "    'max_depth': [None, 10, 20],\n",
+    "    'min_samples_split': [2, 5],\n",
+    "    'min_samples_leaf': [1, 2],\n",
+    "    'class_weight': ['balanced']\n",
+    "}\n",
     "\n",
-    "# Save the model to a .pkl file\n",
+    "grid_search = GridSearchCV(RandomForestClassifier(), param_grid, cv=5)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Best model\n",
+    "best_model = grid_search.best_estimator_\n",
+    "\n",
+    "# Save the best model to a .pkl file\n",
     "with open(\"rf_ransomware.pkl\", \"wb\") as model_file:\n",
-    "    pickle.dump(clf, model_file)\n",
+    "    pickle.dump(best_model, model_file)\n",
     "\n",
     "# Evaluate model accuracy\n",
-    "score = clf.score(X_test, y_test)\n",
+    "score = best_model.score(X_test, y_test)\n",
     "print(f\"Model Accuracy: {score * 100:.2f}%\")\n",
+    "print(\"Best parameters found: \", grid_search.best_params_)\n",
     "\n",
     "# Make predictions and plot confusion matrix\n",
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred = best_model.predict(X_test)\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False,\n",
-    "            xticklabels=['Legitimate', 'Phishing'],\n",
-    "            yticklabels=['Legitimate', 'Phishing'])\n",
+    "            xticklabels=['Legitimate', 'Ransomware'],\n",
+    "            yticklabels=['Legitimate', 'Ransomware'])\n",
     "plt.title('Confusion Matrix')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
@@ -114,7 +126,7 @@
     "print(classification_report(y_test, y_pred))\n",
     "\n",
     "# Feature Importances\n",
-    "importances = clf.feature_importances_\n",
+    "importances = best_model.feature_importances_\n",
     "indices = np.argsort(importances)[::-1]  # Sort features by importance\n",
     "\n",
     "# Plot feature importances with feature names\n",
@@ -143,7 +155,7 @@
     "    for feature in top_features:\n",
     "        f.write(f\"{feature}\\n\")\n",
     "\n",
-    "print(f\"Top {top_n} features saved to top_features.txt\")"
+    "print(f\"Top {top_n} features saved to top_features.txt\")\n"
    ]
   }
  ],
